图片预览正常，pdf失败且自动下载

--- a/fszn/templates/contracts/files.html
+++ b/fszn/templates/contracts/files.html
@@ -117,6 +117,8 @@
             </td>
 
             <td>
+                <a href="{{ url_for('contracts.preview_file', contract_id=contract.id, file_id=f.id) }}" target="_blank">预览</a>
+                |
                 <a href="{{ url_for('contracts.download_file', contract_id=contract.id, file_id=f.id) }}">下载</a>
                 |
                 <form method="post"
