微调文件格式和更改权限sql语句

--- a/fszn/templates/contracts/notify.html
+++ b/fszn/templates/contracts/notify.html
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div style="margin-bottom: 8px;">
+    <!--<div style="margin-bottom: 8px;">
         <label>模板编码：</label><br>
         <input type="text" name="template_code"
                value="{{ default_template_code or 'CONTRACT_EVENT' }}" style="width: 100%;">
@@ -89,7 +89,7 @@
             可约定一些常用编码，例如：<br>
             CONTRACT_DELAY（项目延期提醒）、CONTRACT_ACCEPTANCE（验收提醒）等。
         </div>
-    </div>
+    </div>-->
 
     <div style="margin-bottom: 8px;">
         <label>通知内容：</label><br>
