企业微信接入

--- a/fszn/templates/auth/login.html
+++ b/fszn/templates/auth/login.html
@@ -7,7 +7,7 @@
 <form method="post">
     <p>
         <label>
-            用户名或邮箱：
+            用户名<!--或邮箱-->：
             <input type="text" name="username">
         </label>
     </p>
