大幅度微调很多细节和使用体验以及部署

--- a/fszn/templates/auth/login.html
+++ b/fszn/templates/auth/login.html
@@ -7,7 +7,7 @@
 <form method="post">
     <p>
         <label>
-            用户名<!--或邮箱-->：
+            用户名（输入真实姓名）<!--或邮箱-->：
             <input type="text" name="username">
         </label>
     </p>
