--- a/fszn/templates/auth/register.html
+++ b/fszn/templates/auth/register.html
@@ -7,13 +7,13 @@
 <form method="post">
     <p>
         <label>
-            用户名：
+            用户名（输入真实姓名）：
             <input type="text" name="username">
         </label>
     </p>
     <p>
         <label>
-            真实姓名：
+            真实姓名（再次输入一遍）：
             <input type="text" name="real_name">
         </label>
     </p>
@@ -35,7 +35,7 @@
     <!-- 新增：微信号 -->
     <p>
         <label>
-            微信号：
+            企业微信号：
             <input type="text" name="wechat" required>
         </label>
     </p>
